--- a/delhistyle.css
+++ b/delhistyle.css
@@ -53,6 +53,9 @@
   .contactbg{
     background:transparent url(https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-63496.jpg?w=2000);
   }
+.indexbg{
+    background:transparent url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.hindustantimes.com%2Feducation%2Ffeatures%2Fnalanda-university-a-quest-to-make-india-knowledge-centre-101718859270107.html&psig=AOvVaw3cuK35Yz8vNg7mpae7l690&ust=1720248891255000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKi_rLmqj4cDFQAAAAAdAAAAABAE);
+  }
  
   .cont-sec{
     padding: 8px;
