--- a/delhistyle.css
+++ b/delhistyle.css
@@ -152,7 +152,7 @@ width: 30%;
 }
 .secondHalf img{
     
-  
+  width: 70%;
     border: 4px solid white;
     border-radius: 200px;
     display: block;
