--- a/delhistyle.css
+++ b/delhistyle.css
@@ -54,7 +54,7 @@
     background:transparent url(https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-63496.jpg?w=2000);
   }
 .indexbg{
-    background:transparent url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.hindustantimes.com%2Feducation%2Ffeatures%2Fnalanda-university-a-quest-to-make-india-knowledge-centre-101718859270107.html&psig=AOvVaw3cuK35Yz8vNg7mpae7l690&ust=1720248891255000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKi_rLmqj4cDFQAAAAAdAAAAABAE);
+    background:transparent url(https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-63496.jpg?w=2000);
   }
  
   .cont-sec{
@@ -152,7 +152,7 @@ width: 30%;
 }
 .secondHalf img{
     
-  width: 70%;
+  width: -webkit-fill-available;
     border: 4px solid white;
     border-radius: 200px;
     display: block;
